# devtoys

./: .gitignore  README.md  index.html  package-lock.json  package.json  test-mount.html  vite.config.ts
.github/workflows/: build.yml
packaging/: PKGBUILD  devtoys.desktop
scripts/: fetch-pdfium.sh
src/: App.svelte  app.css  main.ts  test-mount.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: apitest.rs  lib.rs  main.rs  pdf.rs  update.rs
src/lib/: CommandPalette.svelte  QuickLaunch.svelte  api.ts  tools.ts
src/lib/tools/: Base64Image.svelte  Base64Text.svelte  BasicAuth.svelte  CaseConv.svelte  CertDecoder.svelte  ColorConv.svelte  Contrast.svelte  Cron.svelte  CurlToCode.svelte  DataGen.svelte  Diff.svelte  Escape.svelte  Hash.svelte  Hmac.svelte  HtmlEntities.svelte  HttpProxy.svelte  HttpStatus.svelte  ImagesToPdf.svelte  JsonCsv.svelte  JsonDiff.svelte  JsonFormat.svelte  JsonYaml.svelte  Jwt.svelte  LoadTest.svelte  Lorem.svelte  Markdown.svelte  MockServer.svelte  NumberBase.svelte  Password.svelte  PdfA.svelte  PdfCompare.svelte  PdfDelete.svelte  PdfMerge.svelte  PdfMetadata.svelte  PdfOptimize.svelte  PdfReorder.svelte  PdfRotate.svelte  PdfSanitize.svelte  PdfSplit.svelte  PdfStructure.svelte  (+20 more)
src/lib/ui/: Pane.svelte  Segmented.svelte
