[package]
name = "devtoys"
version = "0.2.1"
description = "A beautiful offline Swiss-army knife for developers"
authors = ["russus"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "devtoys_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
crc32fast = "1.4"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "v7"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
